--- a/r3f-mug/package.json
+++ b/r3f-mug/package.json
@@ -14,6 +14,7 @@
     "leva": "^0.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.1",
     "three": "^0.173.0"
   },
   "devDependencies": {
