--- a/r3f-mug/package.json
+++ b/r3f-mug/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^10.0.3",
     "@react-three/fiber": "^9.0.4",
+    "axios": "^1.9.0",
     "leva": "^0.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
