--- a/r3f-mug/package.json
+++ b/r3f-mug/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^10.0.3",
     "@react-three/fiber": "^9.0.4",
     "axios": "^1.9.0",
+    "file-saver": "^2.0.5",
     "leva": "^0.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
